--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,11 @@
 	<title>SpeakLoudly</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
-	<script src="../../lib/jquery-3.2.1.js"></script>
+	<!-- <script src="../../lib/jquery-3.2.1.js"></script> -->
+	<script
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
