--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>SpeakLoudly</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-sale=1, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<!-- <script src="../../lib/jquery-3.2.1.js"></script> -->
 	<script
